# justmatmul

./: CMakeLists.txt  README.md  benchmark.cpp  benchmark.csv  main.cpp  plot.ipynb
.ipynb_checkpoints/: plot-checkpoint.ipynb
include/: matmul.h  matrix.h  micro.h  timeutils.h
src/: matmul.cpp
